# Pyneapple-Demo

./: README.md  pyproject.toml
frontend/gpt_frontend/: package-lock.json  package.json
frontend/gpt_frontend/src/: App.js  ColorMap.js  FileSelector.js  MapComponent.js  QueryInput.js  ShapefileComponent.js
frontend/query_frontend/: README.md  package-lock.json  package.json
frontend/query_frontend/src/: App.css  App.js  ExecutionTimeChart.js  MapContainer.js  MetricsPanel.css  MetricsPanel.js  RangeSlider.css  RangeSlider.js  UI.css  UI.jsx  index.css
localhost/: main.py  plot_labels.json  read_shapefile.py
testData/: Seattle_Equity_Composite_Index.shp  Seattle_Equity_Composite_Index.shx  descriptions.json  pysalData.py
